// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReposList it matches the snapshot 1 1`] = `
<div
  className="ReposList_container"
>
  <div
    className="ReposList_header"
  >
    <div
      className="ReposList_cell"
    >
      Name
    </div>
    <div
      className="ReposList_cell"
    >
      Owner
    </div>
    <div
      className="ReposList_cell"
    >
      Languages
    </div>
  </div>
  <div
    className="ReposList_row"
  >
    <div
      className="ReposList_cell"
    >
      react
    </div>
    <div
      className="ReposList_cell"
    >
      afishlee0
    </div>
    <div
      className="ReposList_cell"
    >
      Scala
      C#
    </div>
  </div>
  <div
    className="ReposList_row"
  >
    <div
      className="ReposList_cell"
    >
      webpack
    </div>
    <div
      className="ReposList_cell"
    >
      kwenger5
    </div>
    <div
      className="ReposList_cell"
    >
      Scala
    </div>
  </div>
  <div
    className="ReposList_row"
  >
    <div
      className="ReposList_cell"
    >
      angular
    </div>
    <div
      className="ReposList_cell"
    >
      shonnan1
    </div>
    <div
      className="ReposList_cell"
    >
      Scala
    </div>
  </div>
</div>
`;

exports[`ReposList it matches the snapshot 2 1`] = `
<div
  className="ReposList_container"
>
  <div
    className="ReposList_group_by"
  >
    afishlee0
  </div>
  <div
    className="ReposList_header"
  >
    <div
      className="ReposList_cell"
    >
      Name
    </div>
    <div
      className="ReposList_cell"
    >
      Languages
    </div>
  </div>
  <div
    className="ReposList_row"
  >
    <div
      className="ReposList_cell"
    >
      react
    </div>
    <div
      className="ReposList_cell"
    >
      Scala
      C#
    </div>
  </div>
  <div
    className="ReposList_group_by"
  >
    kwenger5
  </div>
  <div
    className="ReposList_header"
  >
    <div
      className="ReposList_cell"
    >
      Name
    </div>
    <div
      className="ReposList_cell"
    >
      Languages
    </div>
  </div>
  <div
    className="ReposList_row"
  >
    <div
      className="ReposList_cell"
    >
      webpack
    </div>
    <div
      className="ReposList_cell"
    >
      Scala
    </div>
  </div>
  <div
    className="ReposList_group_by"
  >
    shonnan1
  </div>
  <div
    className="ReposList_header"
  >
    <div
      className="ReposList_cell"
    >
      Name
    </div>
    <div
      className="ReposList_cell"
    >
      Languages
    </div>
  </div>
  <div
    className="ReposList_row"
  >
    <div
      className="ReposList_cell"
    >
      angular
    </div>
    <div
      className="ReposList_cell"
    >
      Scala
    </div>
  </div>
</div>
`;
